--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="film"
-            type="com.larina.mymovie.Film" />
+            type="com.larina.mymovie.domain.Film" />
 
     </data>
 
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context=".DetailsFragment">
+        tools:context=".view.fragments.DetailsFragment">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
